set up the foundation theme

--- a/css/main.css
+++ b/css/main.css
@@ -1,72 +1,235 @@
-/*
-Error: File to import not found or unreadable: ../foundation/scss/foundation/components/grid.
-       Load paths:
-         /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/bower_components/foundation/scss
-         Compass::SpriteImporter
-         /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss
-         /Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets
-        on line 3 of /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/_foundation-components.scss
-        from line 2 of /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/main.scss
+/* line 364, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-version {
+  font-family: "/5.5.2/";
+}
 
-1: @import "settings";
-2: @import "foundation-components"; 
-3: @import "components";
+/* line 368, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-small {
+  font-family: "/only screen/";
+  width: 0;
+}
 
-Backtrace:
-/Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/_foundation-components.scss:3
-/Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/main.scss:2
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/import_node.rb:45:in `import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/tree/root_node.rb:20:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/engine.rb:278:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:305:in `call'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:305:in `_process_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:269:in `block in _wait_for_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:252:in `loop'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:252:in `_wait_for_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.10.1/lib/listen/listener.rb:341:in `block in _start_wait_thread'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: ../foundation/scss/foundation/components/grid.\A        Load paths:\A          /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/bower_components/foundation/scss\A          Compass::SpriteImporter\A          /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss\A          /Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.1/stylesheets\A         on line 3 of /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/_foundation-components.scss\A         from line 2 of /Users/claudiucreanga/sites/ClaudiuCreanga/foundation/scss/main.scss\A \A 1: @import \"settings\";\A 2: @import \"foundation-components\"; \A 3: @import \"components\";"; }
+/* line 373, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-small-only {
+  font-family: "/only screen and (max-width: 40em)/";
+  width: 0;
+}
+
+/* line 378, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-medium {
+  font-family: "/only screen and (min-width:40.0625em)/";
+  width: 40.0625em;
+}
+
+/* line 383, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-medium-only {
+  font-family: "/only screen and (min-width:40.0625em) and (max-width:64em)/";
+  width: 40.0625em;
+}
+
+/* line 388, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-large {
+  font-family: "/only screen and (min-width:64.0625em)/";
+  width: 64.0625em;
+}
+
+/* line 393, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-large-only {
+  font-family: "/only screen and (min-width:64.0625em) and (max-width:90em)/";
+  width: 64.0625em;
+}
+
+/* line 398, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-xlarge {
+  font-family: "/only screen and (min-width:90.0625em)/";
+  width: 90.0625em;
+}
+
+/* line 403, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-xlarge-only {
+  font-family: "/only screen and (min-width:90.0625em) and (max-width:120em)/";
+  width: 90.0625em;
+}
+
+/* line 408, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-mq-xxlarge {
+  font-family: "/only screen and (min-width:120.0625em)/";
+  width: 120.0625em;
+}
+
+/* line 413, ../foundation/foundation/scss/foundation/components/_global.scss */
+meta.foundation-data-attribute-namespace {
+  font-family: false;
+}
+
+/* line 422, ../foundation/foundation/scss/foundation/components/_global.scss */
+html, body {
+  height: 100%;
+}
+
+/* line 425, ../foundation/foundation/scss/foundation/components/_global.scss */
+html {
+  box-sizing: border-box;
+}
+
+/* line 428, ../foundation/foundation/scss/foundation/components/_global.scss */
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+/* line 434, ../foundation/foundation/scss/foundation/components/_global.scss */
+html,
+body {
+  font-size: 100%;
+}
+
+/* line 438, ../foundation/foundation/scss/foundation/components/_global.scss */
+body {
+  background: #fff;
+  color: #222;
+  cursor: auto;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+/* line 451, ../foundation/foundation/scss/foundation/components/_global.scss */
+a:hover {
+  cursor: pointer;
+}
+
+/* line 454, ../foundation/foundation/scss/foundation/components/_global.scss */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* line 456, ../foundation/foundation/scss/foundation/components/_global.scss */
+img {
+  -ms-interpolation-mode: bicubic;
+}
+
+/* line 461, ../foundation/foundation/scss/foundation/components/_global.scss */
+#map_canvas img,
+#map_canvas embed,
+#map_canvas object,
+.map_canvas img,
+.map_canvas embed,
+.map_canvas object,
+.mqa-display img,
+.mqa-display embed,
+.mqa-display object {
+  max-width: none !important;
+}
+
+/* line 468, ../foundation/foundation/scss/foundation/components/_global.scss */
+.left {
+  float: left !important;
+}
+
+/* line 469, ../foundation/foundation/scss/foundation/components/_global.scss */
+.right {
+  float: right !important;
+}
+
+/* line 172, ../foundation/foundation/scss/foundation/components/_global.scss */
+.clearfix:before, .clearfix:after {
+  content: " ";
+  display: table;
+}
+/* line 173, ../foundation/foundation/scss/foundation/components/_global.scss */
+.clearfix:after {
+  clear: both;
+}
+
+/* line 473, ../foundation/foundation/scss/foundation/components/_global.scss */
+.hide {
+  display: none;
+}
+
+/* line 478, ../foundation/foundation/scss/foundation/components/_global.scss */
+.invisible {
+  visibility: hidden;
+}
+
+/* line 484, ../foundation/foundation/scss/foundation/components/_global.scss */
+.antialiased {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 487, ../foundation/foundation/scss/foundation/components/_global.scss */
+img {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* line 497, ../foundation/foundation/scss/foundation/components/_global.scss */
+textarea {
+  height: auto;
+  min-height: 50px;
+}
+
+/* line 500, ../foundation/foundation/scss/foundation/components/_global.scss */
+select {
+  width: 100%;
+}
+
+/* line 129, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion {
+  margin-bottom: 0;
+}
+/* line 172, ../foundation/foundation/scss/foundation/components/_global.scss */
+.accordion:before, .accordion:after {
+  content: " ";
+  display: table;
+}
+/* line 173, ../foundation/foundation/scss/foundation/components/_global.scss */
+.accordion:after {
+  clear: both;
+}
+/* line 132, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation, .accordion dd {
+  display: block;
+  margin-bottom: 0 !important;
+}
+/* line 135, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation.active > a, .accordion dd.active > a {
+  background: #e8e8e8;
+}
+/* line 136, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation > a, .accordion dd > a {
+  background: #EFEFEF;
+  color: #222222;
+  display: block;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-size: 1rem;
+  padding: 1rem;
+}
+/* line 143, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation > a:hover, .accordion dd > a:hover {
+  background: #e3e3e3;
+}
+/* line 146, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation > .content, .accordion dd > .content {
+  display: none;
+  padding: 0.9375rem;
+}
+/* line 149, ../foundation/foundation/scss/foundation/components/_accordion.scss */
+.accordion .accordion-navigation > .content.active, .accordion dd > .content.active {
+  background: #FFFFFF;
+  display: block;
+}
+
+/* line 1, ../foundation/scss/components/_menu.scss */
+* {
+  display: none !important;
+}
