--- a/css/main.css
+++ b/css/main.css
@@ -5327,7 +5327,7 @@ meta.foundation-mq-topbar {
 /* line 119, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .contain-to-grid {
   width: 100%;
-  background: #333333;
+  background: #FFFFFF;
 }
 /* line 123, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .contain-to-grid .top-bar {
@@ -5363,7 +5363,7 @@ meta.foundation-mq-topbar {
 
 /* line 156, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar {
-  background: #333333;
+  background: #FFFFFF;
   height: 2.8125rem;
   line-height: 2.8125rem;
   margin-bottom: 0;
@@ -5426,10 +5426,10 @@ meta.foundation-mq-topbar {
 }
 /* line 219, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar .name h1 a, .top-bar .name h2 a, .top-bar .name h3 a, .top-bar .name h4 a, .top-bar .name p a, .top-bar .name span a {
-  color: #FFFFFF;
+  color: #616265;
   display: block;
   font-weight: normal;
-  padding: 0 0.9375rem;
+  padding: 0 0.625rem 0;
   width: 75%;
 }
 /* line 230, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
@@ -5440,13 +5440,13 @@ meta.foundation-mq-topbar {
 }
 /* line 235, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar .toggle-topbar a {
-  color: #FFFFFF;
+  color: #616265;
   display: block;
   font-size: 0.8125rem;
   font-weight: bold;
   height: 2.8125rem;
   line-height: 2.8125rem;
-  padding: 0 0.9375rem;
+  padding: 0 0.625rem 0;
   position: relative;
   text-transform: uppercase;
 }
@@ -5460,7 +5460,7 @@ meta.foundation-mq-topbar {
   color: #FFFFFF;
   height: 34px;
   line-height: 33px;
-  padding: 0 2.5rem 0 0.9375rem;
+  padding: 0 0.625rem 01.5625rem 0 0.625rem 0;
   position: relative;
 }
 /* line 129, ../foundation/foundation/scss/foundation/components/_global.scss */
@@ -5471,7 +5471,7 @@ meta.foundation-mq-topbar {
   position: absolute;
   margin-top: -8px;
   top: 50%;
-  right: 0.9375rem;
+  right: 0.625rem 0;
   box-shadow: 0 0 0 1px #FFFFFF, 0 7px 0 1px #FFFFFF, 0 14px 0 1px #FFFFFF;
   width: 16px;
 }
@@ -5486,7 +5486,7 @@ meta.foundation-mq-topbar {
 }
 /* line 272, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .title-area {
-  background: #333333;
+  background: #FFFFFF;
 }
 /* line 277, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar.expanded .toggle-topbar a {
@@ -5527,7 +5527,7 @@ meta.foundation-mq-topbar {
 /* line 323, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .divider,
 .top-bar-section [role="separator"] {
-  border-top: solid 1px #1a1a1a;
+  border-top: solid 1px gray;
   clear: both;
   height: 1px;
   width: 100%;
@@ -5538,21 +5538,21 @@ meta.foundation-mq-topbar {
 }
 /* line 334, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > a {
-  color: #FFFFFF;
+  color: #616265;
   display: block;
-  font-family: "ralewayregular", Georgia, Arial;
+  font-family: "ralewaylight", Georgia, Arial;
   font-size: 0.8125rem;
   font-weight: normal;
-  padding-left: 0.9375rem;
-  padding: 12px 0 12px 0.9375rem;
-  text-transform: none;
+  padding-left: 0.625rem 0;
+  padding: 12px 0 12px 0.625rem 0;
+  text-transform: uppercase;
   width: 100%;
 }
 /* line 345, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > a.button {
   font-size: 0.8125rem;
-  padding-left: 0.9375rem;
-  padding-right: 0.9375rem;
+  padding-left: 0.625rem 0;
+  padding-right: 0.625rem 0;
   background-color: #616265;
   border-color: #4e4e51;
   color: #FFFFFF;
@@ -5638,8 +5638,8 @@ meta.foundation-mq-topbar {
 /* line 359, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li > button {
   font-size: 0.8125rem;
-  padding-left: 0.9375rem;
-  padding-right: 0.9375rem;
+  padding-left: 0.625rem 0;
+  padding-right: 0.625rem 0;
   background-color: #616265;
   border-color: #4e4e51;
   color: #FFFFFF;
@@ -5725,22 +5725,22 @@ meta.foundation-mq-topbar {
 /* line 373, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li:hover:not(.has-form) > a {
   background-color: #555555;
-  color: #FFFFFF;
-  background: #222222;
+  color: #232323;
+  background: #FFFFFF;
 }
 /* line 383, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li.active > a {
-  background: #616265;
-  color: #FFFFFF;
+  background: #FFFFFF;
+  color: #232323;
 }
 /* line 387, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section ul li.active > a:hover {
-  background: #535457;
-  color: #FFFFFF;
+  background: #FFFFFF;
+  color: #232323;
 }
 /* line 395, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .has-form {
-  padding: 0.9375rem;
+  padding: 0.625rem 0;
 }
 /* line 400, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .has-dropdown {
@@ -5755,7 +5755,7 @@ meta.foundation-mq-topbar {
   width: 0;
   border-color: transparent transparent transparent rgba(255, 255, 255, 0.4);
   border-left-style: solid;
-  margin-right: 0.9375rem;
+  margin-right: 0.625rem 0;
   margin-top: -4.5px;
   position: absolute;
   top: 50%;
@@ -5802,7 +5802,7 @@ meta.foundation-mq-topbar {
 /* line 444, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li a {
   font-weight: normal;
-  padding: 8px 0.9375rem;
+  padding: 8px 0.625rem 0;
 }
 /* line 447, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li a.parent-link {
@@ -5816,7 +5816,7 @@ meta.foundation-mq-topbar {
 }
 /* line 458, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li.title h5 a, .top-bar-section .dropdown li.parent-link a {
-  color: #FFFFFF;
+  color: #616265;
   display: block;
 }
 /* line 462, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
@@ -5825,7 +5825,7 @@ meta.foundation-mq-topbar {
 }
 /* line 466, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li.has-form {
-  padding: 8px 0.9375rem;
+  padding: 8px 0.625rem 0;
 }
 /* line 470, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
 .top-bar-section .dropdown li .button,
@@ -5838,7 +5838,7 @@ meta.foundation-mq-topbar {
   font-size: 0.625rem;
   font-weight: bold;
   margin-bottom: 0;
-  padding: 8px 0.9375rem 2px;
+  padding: 8px 0.625rem 0 2px;
   text-transform: uppercase;
 }
 
@@ -5850,7 +5850,7 @@ meta.foundation-mq-topbar {
 @media only screen and (min-width: 40.0625em) {
   /* line 492, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar {
-    background: #333333;
+    background: #FFFFFF;
     overflow: visible;
   }
   /* line 172, ../foundation/foundation/scss/foundation/components/_global.scss */
@@ -5891,7 +5891,7 @@ meta.foundation-mq-topbar {
   }
   /* line 517, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar.expanded {
-    background: #333333;
+    background: #FFFFFF;
   }
 
   /* line 522, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
@@ -5923,35 +5923,35 @@ meta.foundation-mq-topbar {
   /* line 545, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li.hover > a:not(.button) {
     background-color: #555555;
-    background: #222222;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #232323;
   }
   /* line 555, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li:not(.has-form) a:not(.button) {
-    background: #333333;
+    background: #FFFFFF;
     line-height: 2.8125rem;
-    padding: 0 0.9375rem;
+    padding: 0 0.625rem 0;
   }
   /* line 559, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li:not(.has-form) a:not(.button):hover {
     background-color: #555555;
-    background: #222222;
+    background: #FFFFFF;
   }
   /* line 569, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li.active:not(.has-form) a:not(.button) {
-    background: #616265;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #232323;
     line-height: 2.8125rem;
-    padding: 0 0.9375rem;
+    padding: 0 0.625rem 0;
   }
   /* line 574, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section li.active:not(.has-form) a:not(.button):hover {
-    background: #535457;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #232323;
   }
   /* line 584, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .has-dropdown > a {
-    padding-right: 2.1875rem !important;
+    padding-right: 0.625rem 01.25rem !important;
   }
   /* line 586, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .has-dropdown > a:after {
@@ -6017,7 +6017,7 @@ meta.foundation-mq-topbar {
     background: #333333;
     color: #FFFFFF;
     line-height: 2.8125rem;
-    padding: 12px 0.9375rem;
+    padding: 12px 0.625rem 0;
     white-space: nowrap;
   }
   /* line 641, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
@@ -6028,7 +6028,7 @@ meta.foundation-mq-topbar {
   /* line 646, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .dropdown li:not(.has-form):not(.active):hover > a:not(.button) {
     background-color: #555555;
-    color: #FFFFFF;
+    color: #232323;
     background: #222222;
   }
   /* line 655, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
@@ -6044,7 +6044,7 @@ meta.foundation-mq-topbar {
   /* line 668, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section > ul > .divider,
   .top-bar-section > ul > [role="separator"] {
-    border-right: solid 1px #4e4e4e;
+    border-right: solid 1px white;
     border-bottom: none;
     border-top: none;
     clear: none;
@@ -6053,9 +6053,9 @@ meta.foundation-mq-topbar {
   }
   /* line 678, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .has-form {
-    background: #333333;
+    background: #FFFFFF;
     height: 2.8125rem;
-    padding: 0 0.9375rem;
+    padding: 0 0.625rem 0;
   }
   /* line 686, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .top-bar-section .right li .dropdown {
@@ -6079,13 +6079,13 @@ meta.foundation-mq-topbar {
   /* line 708, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .no-js .top-bar-section ul li:hover > a {
     background-color: #555555;
-    background: #222222;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #232323;
   }
   /* line 717, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .no-js .top-bar-section ul li:active > a {
-    background: #616265;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #232323;
   }
   /* line 725, ../foundation/foundation/scss/foundation/components/_top-bar.scss */
   .no-js .top-bar-section .has-dropdown:hover > .dropdown {
@@ -7944,4 +7944,8 @@ th.hide-for-touch {
   .show-for-print {
     display: none !important;
   }
+}
+/* line 1, ../foundation/scss/components/_menu.scss */
+.top-bar {
+  letter-spacing: 0.0625rem;
 }
