--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,9 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="{{ relative }}scripts/foundation.min.js"></script>
+  <script src="{{ relative }}scripts/foundation.offcanvas.js"></script>
+  <script src="{{ relative }}scripts/foundation.topbar.js"></script>
+  <script src="{{ relative }}scripts/main.js"></script>
 </head>
