organize assets and fonts

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,8 @@
 <header class="site-header">
 
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
     
-    <div class="contain-to-grid sticky">
+    <div class="contain-to-grid sticky ">
 
 	    <nav class="top-bar" data-topbar role="navigation">
 		  		
@@ -14,7 +12,8 @@
 		      <li class="active"><a href="#">Blog</a></li>
 		      <li class=""><a href="#">About</a></li>
 		      <li class=""><a href="#">Projects</a></li>
-		      <li class=""><a href="#">Social</a></li>
+		      <li class=""><a href="#">Stuff</a></li>
+		      <li class=""><a href="#">Contact</a></li>
 		    </ul>
 		
 		    <!-- Left Nav Section -->
